--- a/lang/en.json
+++ b/lang/en.json
@@ -9,6 +9,8 @@
     "settings.soc.hint": "Replace all between adventures endeavours with the ones listed in Sea of Claws. If Up in Arms Endeavours is enabled, the available ones will be added",
     "settings.lustria.name": "Lustria Endeavours",
     "settings.lustria.hint": "Adds the Lustrian between adventures endeavours and replace all travel endeavours with the ones listed in Lustria.",
+    "settings.dwarf.name": "Dwarf Player's Guide Endeavour",
+    "settings.dwarf.hint": "Adds the Forge Rune endeavour included in Dwarf Player's Guide.",
     "settings.shelley.name": "Shelley Endeavour",
     "settings.shelley.hint": "Adds the endeavour granted by Scealleah 'Shelley' Thorncobble (Patrons of the Old World I).",
     "settings.farforian.name": "Farforian Endeavour",
@@ -84,6 +86,7 @@
     "WFRP4eEndeavours.BA.Hedge": "Hedge School",
     "WFRP4eEndeavours.BA.Visionaries": "No Use for Visionaries",
     "WFRP4eEndeavours.BA.Witness": "Bear Witness",
+    "WFRP4eEndeavours.BA.ForgeRune": "Forge Rune",
 
     "WFRP4eEndeavours.Travel.Woodcraft": "Woodcraft",
     "WFRP4eEndeavours.Travel.Forage": "Forage",
@@ -102,9 +105,9 @@
     "WFRP4eEndeavours.Link.Career": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.oj2iiLVfNWp7KIhk]{Changing Career}.",
     "WFRP4eEndeavours.Link.Commission": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.Z1GbXJsphhaTINRA]{Commission}.",
     "WFRP4eEndeavours.Link.Expert": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.0EF53KOVgme173EO]{Consult an Expert}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.5sNZ0wUFt5e2kl8g]{Find an Expert}",
-    "WFRP4eEndeavours.Link.Crafting": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.RQLJYU3OyA0WUoPG]{Crafting}.",
+    "WFRP4eEndeavours.Link.Crafting": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.RQLJYU3OyA0WUoPG]{Crafting}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.UybjeWFUfCmBW6Uy]{Start Crafting}",
     "WFRP4eEndeavours.Link.Income": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.JX9ifRlgzzGrU2zh]{Income}.",
-    "WFRP4eEndeavours.Link.Invent": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.WlZBXUi7qdCCeNl1]{Invent!}.",
+    "WFRP4eEndeavours.Link.Invent": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.WlZBXUi7qdCCeNl1]{Invent!}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.YQP6FO8wwPuMfDxw]{Plan an Invention}",
     "WFRP4eEndeavours.Link.Training": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.0T8zisBH3D082Ztw]{Training}.",
     "WFRP4eEndeavours.Link.Learning": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.bWcKCn1S1ufDG9bJ]{Unusual Learning}.",
     "WFRP4eEndeavours.Link.Combat": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.517cQPn5p1bkRUgu]{Combat Training}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.RJvdnVN7IZU2NqG1]{Combat Training}",
@@ -113,14 +116,14 @@
     "WFRP4eEndeavours.Link.Reputation": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.N4EC4CCPZtX9i5qa]{Reputation}.",
     "WFRP4eEndeavours.Link.Research": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.2fjLtw5evY7LnjS0]{Research Lore}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.HZg1fkgEJW7AKrm2]{Research Lore}",
     "WFRP4eEndeavours.Link.Mark": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.7OPLj3XFgJvpj24D]{Study a Mark}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.w6bgiYK0m0tE9ra3]{Study a Mark}",
-    "WFRP4eEndeavours.Link.Woodcraft": "Woodcraft.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.v17mX07IRnYJa8ju]{Woodcraft}",
-    "WFRP4eEndeavours.Link.Forage": "Forage.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yaScut9F9BczNQ82]{Forage}",
-    "WFRP4eEndeavours.Link.Information": "Gather Information.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6oflBLaejV68Ds4Y]{Gather Information}",
-    "WFRP4eEndeavours.Link.Watch": "Keep Watch.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yQKnn7GB8tZvyisf]{Keep Watch}",
-    "WFRP4eEndeavours.Link.Map": "Map the Route.",
-    "WFRP4eEndeavours.Link.Practice": "Practice a Skill.",
-    "WFRP4eEndeavours.Link.Recuperate": "Recuperate.",
-    "WFRP4eEndeavours.Link.Camp": "Make Camp.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.0uAdenlQr0lK438e]{Make Camp}",
+    "WFRP4eEndeavours.Link.Woodcraft": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.ydgVG7wyZMi5rmEI]{Woodcraft}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.v17mX07IRnYJa8ju]{Woodcraft}",
+    "WFRP4eEndeavours.Link.Forage": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.gOYxEWeCEpGyQpz7]{Forage}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yaScut9F9BczNQ82]{Forage}",
+    "WFRP4eEndeavours.Link.Information": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.hBqb1r8DQ0yetQFk]{Gather Information}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6oflBLaejV68Ds4Y]{Gather Information}",
+    "WFRP4eEndeavours.Link.Watch": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.yvdhuxcAAkxkklmf]{Keep Watch}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yQKnn7GB8tZvyisf]{Keep Watch}",
+    "WFRP4eEndeavours.Link.Map": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.SiADDCab9kI0BAJR]{Map the Route}.",
+    "WFRP4eEndeavours.Link.Practice": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.yRShdcqphDDsrve5]{Practice a Skill}.",
+    "WFRP4eEndeavours.Link.Recuperate": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.pSXKs5wkCogMJist]{Recuperate}.",
+    "WFRP4eEndeavours.Link.Camp": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.2fJCV0zDeqoGZjqq]{Make Camp}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.0uAdenlQr0lK438e]{Make Camp}",
     "WFRP4eEndeavours.Link.College": "College Research.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6w5TWRe30xs1PwmX]{College Research}",
     "WFRP4eEndeavours.Link.Patronage": "Patronage.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Tc4mUAG2DtdfdRaI]{Patronage}",
     "WFRP4eEndeavours.Link.Penance": "Penance.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.LtZXd1AtW9bP0qwq]{Penance}",
@@ -160,8 +163,11 @@
     "WFRP4eEndeavours.Link.Hedge": "Hedge School.",
     "WFRP4eEndeavours.Link.Visionaries": "No Use for Visionaries.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Y8S3DwkxYEFpMUdM]{Foment Dissent with Rosendorn}.<br>Then @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.ZYiQGec6Gi6K85lz]{Rosendorn's Prophecy} for Rosendorn",
     "WFRP4eEndeavours.Link.Witness": "Bear Witness.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.dJZMhU1DKTmdvy8S]{Bear Witness}",
+    "WFRP4eEndeavours.Link.ForgeRune": "Forge Rune.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.j8yh1Gr1iCbNG2K8]{Start Forging Rune}",
 
     "WFRP4eEndeavours.Title.Animal": "Animal Training",
+    "WFRP4eEndeavours.Title.Crafting": "Start Crafting",
+    "WFRP4eEndeavours.Title.Invent": "Plan an Invention",
     "WFRP4eEndeavours.Title.Expert": "Find an Expert",
     "WFRP4eEndeavours.Title.DissentCharm": "Foment Dissent (Charm)",
     "WFRP4eEndeavours.Title.DissentGossip": "Foment Dissent (Gossip)",
@@ -201,9 +207,11 @@
     "WFRP4eEndeavours.Title.Null": "Resist Null",
     "WFRP4eEndeavours.Title.Visionaries": "Rosendorn's Prophecy",
     "WFRP4eEndeavours.Title.Witness": "Bear Witness",
+    "WFRP4eEndeavours.Title.ForgeRune": "Start Forging Rune",
 
     "WFRP4eEndeavours.Failure.Animal": "<p>Your animal needs more training.</p>",
     "WFRP4eEndeavours.Failure.Expert": "<p>Still didn't find an expert.</p>",
+    "WFRP4eEndeavours.Failure.Invent": "<p>Something is still missing...</p>",
     "WFRP4eEndeavours.Failure.DissentCharm": "<p>Nobody is convinced by your speech.</p>",
     "WFRP4eEndeavours.Failure.DissentGossip": "<p>You can't find enough information.</p>",
     "WFRP4eEndeavours.Failure.Combat": "<p>You must train harder.</p>",
@@ -244,6 +252,7 @@
 
     "WFRP4eEndeavours.Success.Animal": "<p>Your animal learned a new trick! You can add a @UUID[Compendium.wfrp4e-core.items.Item.V0naR1YbYCl0KIxp]{Trained} Creature Trait.</p>",
     "WFRP4eEndeavours.Success.Expert": "<p>An expert has been located.</p>",
+    "WFRP4eEndeavours.Success.Invent": "<p>The blueprints are ready!</p>",
     "WFRP4eEndeavours.Success.DissentCharm": "<p>The crowd is heeding you.</p>",
     "WFRP4eEndeavours.Success.DissentGossip": "<p>You are ready to start talking to the masses.</p>",
     "WFRP4eEndeavours.Success.Combat": "<p>You may reverse a Test with the associated Skill once during your next adventure.</p>",
@@ -287,10 +296,12 @@
     "WFRP4eEndeavours.Notification.NoTraining": "You can't train animals!",
     "WFRP4eEndeavours.Notification.NoResearch": "You can't read or write!",
     "WFRP4eEndeavours.Notification.NoSkill": "You don't have the right skill!",
+    "WFRP4eEndeavours.Notification.NoTrade": "You don't have any Trade skill!",
     "WFRP4eEndeavours.Notification.NoHeal": "You can't heal!",
     "WFRP4eEndeavours.Notification.NoWeapon": "You don't have any weapon!",
     "WFRP4eEndeavours.Notification.NoShip": "You can't maintain ships!",
     "WFRP4eEndeavours.Notification.NoBoat": "You can't repair boats!",
+    "WFRP4eEndeavours.Notification.CreatedTest": "Created Extended Test: {name}",
     "WFRP4eEndeavours.Animal.ChooseSkill": "Choose a Training Skill.",
     "WFRP4eEndeavours.Combat.ChooseSkill": "Choose a Training Skill.",
     "WFRP4eEndeavours.Camp.Choose": "The camp will be used to Heal or Rest?",
@@ -307,12 +318,25 @@
     "NAME.EntertainProphecy":"Entertain (Prophecy)",
     "NAME.EntertainStorytelling":"Entertain (Storytelling)",
     "NAME.RangedBow":"Ranged (Bow)",
+    "NAME.TradeEngineering":"Trade (Engineering)",
     "NAME.TradeCartographer":"Trade (Cartographer)",
     "NAME.TradeBoatbuilder":"Trade (Boatbuilder)",
     "NAME.TradeCarpenter":"Trade (Carpenter)",
     "NAME.ReadWrite":"Read/Write",
     "NAME.LoreTheology":"Lore (Theology)",
     "NAME.LoreSigmar":"Lore (Sigmar)",
+    "NAME.Runesmithing":"Runesmithing",
+
+    "WFRP4eEndeavours.ItemName": "Item Name",
+    "WFRP4eEndeavours.Crafting": "Crafting: ",
+    "WFRP4eEndeavours.TargetSL": "Target SL",
+    "WFRP4eEndeavours.InitialSL": "Initial SL",
+    "WFRP4eEndeavours.InitialSLTooltip": "If comes from an Invent! endeavour",
+	
+    "WFRP4eEndeavours.RuneName": "Rune Name",
+    "WFRP4eEndeavours.RuneType": "Rune Type",
+    "WFRP4eEndeavours.Forging": "Forging: ",
+    "WFRP4eEndeavours.Master": "Master",
 
     "WFRP4eEndeavours.Income.Earned": "You earned ",
     "WFRP4eEndeavours.Income.Fumble": "You earned nothing at all.",
