--- a/lang/es.json
+++ b/lang/es.json
@@ -9,6 +9,8 @@
     "settings.soc.hint": "Reemplaza todas las empresas de entre aventuras con las listadas en Sea of Claws. Si las Empresas de Up in Arms est\u00E1n activadas, se a\u00F1adir\u00E1n las disponibles.",
     "settings.lustria.name": "Empresas de Lustria",
     "settings.lustria.hint": "A\u00F1ade las empresas entre aventuras lustrianas y reemplaza todas las empresas de viaje con los listadas en Lustria.",
+    "settings.dwarf.name": "Empresa de Dwarf Player's Guide",
+    "settings.dwarf.hint": "A\u00F1ade la empresa Forjar runa incluida en Dwarf Player's Guide.",
     "settings.shelley.name": "Empresa de Shelley",
     "settings.shelley.hint": "A\u00F1ade la empresa concedida por Scealleah 'Shelley' Thorncobble (Patrons of the Old World I).",
     "settings.farforian.name": "Empresa de Farforian",
@@ -84,6 +86,7 @@
     "WFRP4eEndeavours.BA.Hedge": "Escuela de adivinaci\u00F3n",
     "WFRP4eEndeavours.BA.Visionaries": "Ning\u00FAn uso para los visionarios",
     "WFRP4eEndeavours.BA.Witness": "Atestigua",
+    "WFRP4eEndeavours.BA.ForgeRune": "Forjar Runa",
     
     "WFRP4eEndeavours.Travel.Woodcraft": "Conocimiento del bosque",
     "WFRP4eEndeavours.Travel.Forage": "Forrajear",
@@ -102,9 +105,9 @@
     "WFRP4eEndeavours.Link.Career": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.oj2iiLVfNWp7KIhk]{Cambiar de carrera}.",
     "WFRP4eEndeavours.Link.Commission": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.Z1GbXJsphhaTINRA]{Encargo}.",
     "WFRP4eEndeavours.Link.Expert": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.0EF53KOVgme173EO]{Consultar con un experto}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.5sNZ0wUFt5e2kl8g]{Encontrar un experto}",
-    "WFRP4eEndeavours.Link.Crafting": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.RQLJYU3OyA0WUoPG]{Artesan\u00EDa}.",
+    "WFRP4eEndeavours.Link.Crafting": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.RQLJYU3OyA0WUoPG]{Artesan\u00EDa}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.UybjeWFUfCmBW6Uy]{Comenzar Artesan\u00EDa}",
     "WFRP4eEndeavours.Link.Income": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.JX9ifRlgzzGrU2zh]{Salario}.",
-    "WFRP4eEndeavours.Link.Invent": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.WlZBXUi7qdCCeNl1]{\u00A1Inventar!}.",
+    "WFRP4eEndeavours.Link.Invent": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.WlZBXUi7qdCCeNl1]{\u00A1Inventar!}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.YQP6FO8wwPuMfDxw]{Planificar un invento}",
     "WFRP4eEndeavours.Link.Training": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.0T8zisBH3D082Ztw]{Entrenar}.",
     "WFRP4eEndeavours.Link.Learning": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.bWcKCn1S1ufDG9bJ]{Aprendizaje inusual}.",
     "WFRP4eEndeavours.Link.Combat": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.517cQPn5p1bkRUgu]{Entrenamiento en combate}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.RJvdnVN7IZU2NqG1]{Entrenamiento en combate}",
@@ -113,14 +116,14 @@
     "WFRP4eEndeavours.Link.Reputation": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.N4EC4CCPZtX9i5qa]{Reputaci\u00F3n}.",
     "WFRP4eEndeavours.Link.Research": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.2fjLtw5evY7LnjS0]{Investigar un saber}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.HZg1fkgEJW7AKrm2]{Investigar un saber}",
     "WFRP4eEndeavours.Link.Mark": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.7OPLj3XFgJvpj24D]{Estudiar a una v\u00EDctima}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.w6bgiYK0m0tE9ra3]{Estudiar a una v\u00EDctima}",
-    "WFRP4eEndeavours.Link.Woodcraft": "Conocimiento del bosque.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.v17mX07IRnYJa8ju]{Conocimiento del bosque}",
-    "WFRP4eEndeavours.Link.Forage": "Forrajear.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yaScut9F9BczNQ82]{Forrajear}",
-    "WFRP4eEndeavours.Link.Information": "Recopilar informaci\u00F3n.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6oflBLaejV68Ds4Y]{Recopilar informaci\u00F3n}",
-    "WFRP4eEndeavours.Link.Watch": "Montar guardia.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yQKnn7GB8tZvyisf]{Montar guardia}",
-    "WFRP4eEndeavours.Link.Map": "Trazar la ruta.",
-    "WFRP4eEndeavours.Link.Practice": "Practicar una habilidad.",
-    "WFRP4eEndeavours.Link.Recuperate": "Recuperar.",
-    "WFRP4eEndeavours.Link.Camp": "Acampar.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.0uAdenlQr0lK438e]{Acampar}",
+    "WFRP4eEndeavours.Link.Woodcraft": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.ydgVG7wyZMi5rmEI]{Conocimiento del bosque}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.v17mX07IRnYJa8ju]{Conocimiento del bosque}",
+    "WFRP4eEndeavours.Link.Forage": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.gOYxEWeCEpGyQpz7]{Forrajear}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yaScut9F9BczNQ82]{Forrajear}",
+    "WFRP4eEndeavours.Link.Information": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.hBqb1r8DQ0yetQFk]{Recopilar informaci\u00F3n}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6oflBLaejV68Ds4Y]{Recopilar informaci\u00F3n}",
+    "WFRP4eEndeavours.Link.Watch": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.yvdhuxcAAkxkklmf]{Montar guardia}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yQKnn7GB8tZvyisf]{Montar guardia}",
+    "WFRP4eEndeavours.Link.Map": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.SiADDCab9kI0BAJR]{Trazar la ruta}.",
+    "WFRP4eEndeavours.Link.Practice": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.yRShdcqphDDsrve5]{Practicar una habilidad}.",
+    "WFRP4eEndeavours.Link.Recuperate": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.pSXKs5wkCogMJist]{Recuperar}.",
+    "WFRP4eEndeavours.Link.Camp": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.2fJCV0zDeqoGZjqq]{Acampar}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.0uAdenlQr0lK438e]{Acampar}",
     "WFRP4eEndeavours.Link.College": "Investigaci\u00F3n en Colegio.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6w5TWRe30xs1PwmX]{Investigaci\u00F3n en Colegio}",
     "WFRP4eEndeavours.Link.Patronage": "Patrocinio.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Tc4mUAG2DtdfdRaI]{Patrocinio}",
     "WFRP4eEndeavours.Link.Penance": "Penitencia.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.LtZXd1AtW9bP0qwq]{Penitencia}",
@@ -160,9 +163,12 @@
     "WFRP4eEndeavours.Link.Hedge": "Escuala de adivinaci\u00F3n.",
     "WFRP4eEndeavours.Link.Visionaries": "Ning\u00FAn uso para los visionarios.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Y8S3DwkxYEFpMUdM]{Fomentar la discordia con Rosendorn}.<br>Despu\u00E9s @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.ZYiQGec6Gi6K85lz]{La profec\u00EDa de Rosendorn} para Rosendorn",
     "WFRP4eEndeavours.Link.Witness": "Atestigua.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.dJZMhU1DKTmdvy8S]{Atestigua}",
+    "WFRP4eEndeavours.Link.ForgeRune": "Forjar runa.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.j8yh1Gr1iCbNG2K8]{Comenzar forja de runa}",
 
     "WFRP4eEndeavours.Title.Animal": "Adiestrar animal",
     "WFRP4eEndeavours.Title.Expert": "Encontar un experto",
+    "WFRP4eEndeavours.Title.Crafting": "Comenzar Artesan\u00EDa",
+    "WFRP4eEndeavours.Title.Invent": "Planificar un invento",
     "WFRP4eEndeavours.Title.DissentCharm": "Fomentar la discordia (Carisma)",
     "WFRP4eEndeavours.Title.DissentGossip": "Fomentar la discordia (Cotilleo)",
     "WFRP4eEndeavours.Title.Combat": "Entrenamiento en combate",
@@ -201,9 +207,11 @@
     "WFRP4eEndeavours.Title.Null": "Resistir la Nulidad",
     "WFRP4eEndeavours.Title.Visionaries": "La profec\u00EDa de Rosendorn",
     "WFRP4eEndeavours.Title.Witness": "Atestigua",
+    "WFRP4eEndeavours.Title.ForgeRune": "Comenzar forja de runa",
 
     "WFRP4eEndeavours.Failure.Animal": "<p>Tu animal necesita m\u00E1s entrenamiento.</p>",
     "WFRP4eEndeavours.Failure.Expert": "<p>A\u00FAn no has encontrado un experto</p>",
+    "WFRP4eEndeavours.Failure.Invent": "<p>A\u00FAn falta algo...</p>",
     "WFRP4eEndeavours.Failure.DissentCharm": "<p>A nadie le convence tu discurso.</p>",
     "WFRP4eEndeavours.Failure.DissentGossip": "<p>No consigues encontrar suficiente informaci\u00F3n.</p>",
     "WFRP4eEndeavours.Failure.Combat": "<p>Debes entrenar m\u00E1s.</p>",
@@ -226,7 +234,7 @@
     "WFRP4eEndeavours.Failure.Leitdorf": "<p>No has podido dominar esta t\u00E9cnica.</p>",
     "WFRP4eEndeavours.Failure.Job": "<p>Tus antiguos socios no saben de ning\u00FAn trabajo que pueda ayudarte.</p>",
     "WFRP4eEndeavours.Failure.Job2": "<p>Consigues el objeto, pero el precio puede ser demasiado alto.</p>",
-    "WFRP4eEndeavours.Failure.Familiar": "<p>Eres incapaz de mejorar tu familiar... a\u00FAn.</p>",
+    "WFRP4eEndeavours.Failure.Familiar": "<p>Eres incapaz de mejorar tu familiar... de momento.</p>",
     "WFRP4eEndeavours.Failure.Mapmaking": "<p>Necesitas trabajar m\u00E1s en tu mapa.</p>",
     "WFRP4eEndeavours.Failure.Trade": "<p>Cre\u00EDas tener un negocio lucrativo entre manos... La realidad cre\u00EDa otra cosa.</p>",
     "WFRP4eEndeavours.Failure.Ship": "<p>Tu barco necesita m\u00E1s trabajo de mantenimiento.</p>",
@@ -244,6 +252,7 @@
 
     "WFRP4eEndeavours.Success.Animal": "<p>\u00A1Tu animal ha aprendido un nuevo truco! Puedes a\u00F1adir un Rasgo de Criatura @UUID[Compendium.wfrp4e-core.items.Item.V0naR1YbYCl0KIxp]{Adiestrado}.</p>",
     "WFRP4eEndeavours.Success.Expert": "<p>Has localizado un experto</p>",
+    "WFRP4eEndeavours.Success.Invent": "<p>\u00A1Los planos est\u00E1n listos!</p>",
     "WFRP4eEndeavours.Success.DissentCharm": "<p>La multitud te presta atenci\u00F3n.</p>",
     "WFRP4eEndeavours.Success.DissentGossip": "<p>Est\u00E1s preparado para hablarle a las masas.</p>",
     "WFRP4eEndeavours.Success.Combat": "<p>Podr\u00E1s invertir los dados en un Chequeo llevado a cabo con la Habilidad asociada una vez durante la siguiente aventura.</p>",
@@ -287,10 +296,12 @@
     "WFRP4eEndeavours.Notification.NoTraining": "\u00A1No sabes adiestrar animales!",
     "WFRP4eEndeavours.Notification.NoResearch": "\u00A1Necesitas saber leer y escribir!",
     "WFRP4eEndeavours.Notification.NoSkill": "\u00A1No tienes ninguna habilidad adecuada!",
+    "WFRP4eEndeavours.Notification.NoTrade": "\u00A1No tienes ninguna habilidad de Oficio!",
     "WFRP4eEndeavours.Notification.NoHeal": "\u00A1No sabes sanar!",
     "WFRP4eEndeavours.Notification.NoWeapon": "\u00A1No tienes ning\u00FAn arma!",
     "WFRP4eEndeavours.Notification.NoShip": "\u00A1No sabes mantener barcos!",
     "WFRP4eEndeavours.Notification.NoBoat": "\u00A1No sabes reparar barcos!",
+    "WFRP4eEndeavours.Notification.CreatedTest": "Creado chequeo prolongado: {name}",
     "WFRP4eEndeavours.Animal.ChooseSkill": "Escoge una habilidad para adiestrar",
     "WFRP4eEndeavours.Combat.ChooseSkill": "Escoge una habilidad para entrenar",
     "WFRP4eEndeavours.Camp.Choose": "\u00BFEl campamento ser\u00E1 usado para Sanar o Descansar?",
@@ -307,12 +318,25 @@
     "NAME.EntertainProphecy":"Animar (Profec\u00EDa)",
     "NAME.EntertainStorytelling":"Animar (Relatar)",
     "NAME.RangedBow":"A distancia (Arco)",
+    "NAME.TradeEngineering":"Oficio (Ingeniero)",
     "NAME.TradeCartographer":"Oficio (Cart\u00F3grafo)",
     "NAME.TradeBoatbuilder":"Oficio (Constructor de botes)",
     "NAME.TradeCarpenter":"Oficio (Carpintero)",
     "NAME.ReadWrite":"Leer y escribir",
     "NAME.LoreTheology":"Sabidur\u00EDa acad\u00E9mica (Teolog\u00EDa)",
     "NAME.LoreSigmar":"Sabidur\u00EDa acad\u00E9mica (Sigmar)",
+    "NAME.Runesmithing":"Herrer\u00EDa r\u00FAnica",
+
+    "WFRP4eEndeavours.ItemName": "Nombre del objeto",
+    "WFRP4eEndeavours.Crafting": "Artesan\u00EDa: ",
+    "WFRP4eEndeavours.TargetSL": "NE objetivo",
+    "WFRP4eEndeavours.InitialSL": "NE iniciales",
+    "WFRP4eEndeavours.InitialSLTooltip": "Si proviene de una empresa de \u00A1Inventar!",
+
+    "WFRP4eEndeavours.RuneName": "Nombre de la runa",
+    "WFRP4eEndeavours.RuneType": "Tipo de runa",
+    "WFRP4eEndeavours.Forging": "Forjando: ",
+    "WFRP4eEndeavours.Master": "Maestra",
 
     "WFRP4eEndeavours.Income.Earned": "Has ganado ",
     "WFRP4eEndeavours.Income.Fumble": "No has ganado nada en absoluto.",
